Updated to spring-boot-admin 3.0.3 and spring-cloud 2022.0.2

--- a/kubernetes-fabric8/spring-boot-admin/src/main/resources/application.yml
+++ b/kubernetes-fabric8/spring-boot-admin/src/main/resources/application.yml
@@ -52,10 +52,12 @@ info: # Application-Infos for the Info-Actuator
   version: "@pom.version@"
   spring-boot: "@pom.parent.version@"
   spring-boot-admin: "@spring-boot-admin.version@"
+  spring-cloud: "@spring-cloud.version@"
   # Tags for the Spring Boot Admin UI
   tags:
     spring-boot: "@pom.parent.version@"
     spring-boot-admin: "@spring-boot-admin.version@"
+    spring-cloud: "@spring-cloud.version@"
 logging: # Logging-File for the Logfile-Actuator
   file:
     name: "spring-boot-admin.log"
