--- a/kubernetes-fabric8/health-simulator/docker-compose.yml
+++ b/kubernetes-fabric8/health-simulator/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3.7"
 
 services:
-  hello-world:
-    image: hello-world:latest
+  health-simulator:
+    image: health-simulator:latest
     ports:
       - 8080:8080
       - 8081:8081
