--- a/kubernetes-fabric8/helm-charts/spring-boot-admin/templates/deployment.yaml
+++ b/kubernetes-fabric8/helm-charts/spring-boot-admin/templates/deployment.yaml
@@ -26,8 +26,10 @@ spec:
       - name: {{ .Values.name }}
         image: {{ .Values.deployment.image }}
         imagePullPolicy: {{ .Values.deployment.pullPolicy }}
-        {{- with .Values.deployment.env }}
         env:
+          - name: SERVER_SERVLET_CONTEXT_PATH
+            value: /{{ .Values.name }}
+        {{- with .Values.deployment.env }}
         {{- range $env_var, $key := . }}
           - name: {{ $env_var }}
             value: "{{ $key }}"
