--- a/kubernetes-fabric8/helm-charts/spring-boot-admin/values.yaml
+++ b/kubernetes-fabric8/helm-charts/spring-boot-admin/values.yaml
@@ -5,8 +5,7 @@ deployment:
   env:
     SPRING_BOOT_ADMIN_UI_TITLE: Spring Boot Admin - Kubernetes
   image: spring-boot-admin
-  # not recommended for production
-  pullPolicy: Never
+  pullPolicy: IfNotPresent
   updateStrategy: RollingUpdate
   maxSurge: 100%
   maxUnavailable: 0%
