added config for codecentric k8s - spring-boot-admin

--- a/kubernetes-fabric8/helm-charts/spring-boot-admin/templates/deployment.yaml
+++ b/kubernetes-fabric8/helm-charts/spring-boot-admin/templates/deployment.yaml
@@ -20,7 +20,7 @@ spec:
       labels:
         app: {{ .Values.name }}
     spec:
-      serviceAccountName: {{ .Values.name }}-account
+      serviceAccountName: {{ .Values.serviceAccountName }}
       restartPolicy: {{ .Values.deployment.restartPolicy }}
       containers:
       - name: {{ .Values.name }}
