--- a/kubernetes-fabric8/apps/spring-boot-admin/pom.xml
+++ b/kubernetes-fabric8/apps/spring-boot-admin/pom.xml
@@ -20,7 +20,7 @@
   <properties>
     <java.version>17</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <spring-boot-admin.version>3.0.4</spring-boot-admin.version>
+    <spring-boot-admin.version>3.0.5-SNAPSHOT</spring-boot-admin.version>
     <spring-cloud.version>2022.0.2</spring-cloud.version>
   </properties>
 
