--- a/kubernetes-fabric8/apps/spring-boot-admin/src/main/resources/application.yml
+++ b/kubernetes-fabric8/apps/spring-boot-admin/src/main/resources/application.yml
@@ -10,11 +10,19 @@ spring:
         # public-url: ${SPRING_BOOT_ADMIN_UI_PUBLIC_URL:http://localhost:8080}
         title: ${SPRING_BOOT_ADMIN_UI_TITLE:Spring Boot Admin}
         brand: <img src="assets/img/icon-spring-boot-admin.svg"><span>${SPRING_BOOT_ADMIN_UI_TITLE:Spring Boot Admin}</span>
-      discovery: # Filter discovery to tagged services
-        instances-metadata:
-          spring-boot-admin: true
-# Service port name must be http or https or ...
-#  cloud:
+      #discovery: # Filter discovery to tagged services
+      #  instances-metadata:
+      #    spring-boot-admin: true
+
+  cloud:
+    kubernetes:
+      discovery:
+        metadata:
+          ports:
+            management: 8081
+        serviceLabels:
+          spring-boot: true
+
 #    kubernetes:
 #      discovery:
 #        primary-port-name: http
