--- a/kubernetes-fabric8/helm-charts/spring-boot-admin/templates/service.yaml
+++ b/kubernetes-fabric8/helm-charts/spring-boot-admin/templates/service.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: {{ .Values.namespace }}
   labels:
     app: {{ .Values.name }}
+    spring-boot: "true"
   # Filter discovery to tagged services
   annotations:
     spring-boot-admin: "true"
