--- a/kubernetes/apps/spring-boot-admin-fabric8/pom.xml
+++ b/kubernetes/apps/spring-boot-admin-fabric8/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xmlns="http://maven.apache.org/POM/4.0.0"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -11,7 +11,7 @@
   </parent>
 
   <groupId>de.codecentric</groupId>
-  <artifactId>spring-boot-admin</artifactId>
+  <artifactId>spring-boot-admin-fabric8</artifactId>
   <packaging>jar</packaging>
   <name>${project.artifactId}</name>
   <version>1.0.0-SNAPSHOT</version>
