--- a/kubernetes/helm-charts/spring-boot-admin/values.yaml
+++ b/kubernetes/helm-charts/spring-boot-admin/values.yaml
@@ -18,3 +18,8 @@ deployment:
   readinessProbe:
     initialDelaySeconds: 10
     timeoutSeconds: 10
+  server:
+    port: 8080
+  management:
+    port: 8081
+
