provide example for both spring cloud kubernetes clients (#3)
* testing kubernetes discovery client
* Updated SBA versions

---------

Co-authored-by: ulrichschulte <ulrich.schulte@codecentric.de>

--- a/kubernetes/helm-charts/spring-boot-admin/templates/service.yaml
+++ b/kubernetes/helm-charts/spring-boot-admin/templates/service.yaml
@@ -5,18 +5,19 @@ metadata:
   namespace: {{ .Values.namespace }}
   labels:
     app: {{ .Values.name }}
+    spring-boot: "true"
   # Filter discovery to tagged services
   annotations:
     spring-boot-admin: "true"
 spec:
   ports:
-    - port: 8080
+    - port: {{ .Values.deployment.server.port }}
       targetPort: http
       protocol: TCP
       # Name must be http or https
       # Alternative: configure spring.cloud.kubernetes.discovery.primary-port-name
       name: http
-    - port: 8081
+    - port: {{ .Values.deployment.management.port }}
       targetPort: management
       protocol: TCP
       name: management
