--- a/nacos/apps/hello-world/pom.xml
+++ b/nacos/apps/hello-world/pom.xml
@@ -7,11 +7,11 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.1.1</version>
+    <version>3.0.7</version>
   </parent>
 
   <groupId>de.codecentric</groupId>
-  <artifactId>hello-world</artifactId>
+  <artifactId>hello-world-nacos</artifactId>
   <packaging>jar</packaging>
   <name>${project.artifactId}</name>
   <version>1.0.0-SNAPSHOT</version>
@@ -33,6 +33,13 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-actuator</artifactId>
     </dependency>
+
+    <!-- Nacos Discovery -->
+    <dependency>
+      <groupId>com.alibaba.cloud</groupId>
+      <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+      <version>2022.0.0.0-RC2</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -46,13 +53,13 @@
             <id>repackage</id>
             <goals>
               <goal>repackage</goal>
-              <!-- Build-Infos for Info-Actuator -->
+              <!-- Build-Info for Info-Actuator -->
               <goal>build-info</goal>
             </goals>
           </execution>
         </executions>
       </plugin>
-      <!-- GIT-Infos for Info-Actuator -->
+      <!-- GIT-Info for Info-Actuator -->
       <plugin>
         <groupId>io.github.git-commit-id</groupId>
         <artifactId>git-commit-id-maven-plugin</artifactId>
