--- a/nacos/apps/spring-boot-admin/pom.xml
+++ b/nacos/apps/spring-boot-admin/pom.xml
@@ -7,19 +7,20 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.1.1</version>
+    <version>3.0.7</version>
   </parent>
 
   <groupId>de.codecentric</groupId>
-  <artifactId>hello-world</artifactId>
+  <artifactId>spring-boot-admin-nacos</artifactId>
   <packaging>jar</packaging>
   <name>${project.artifactId}</name>
   <version>1.0.0-SNAPSHOT</version>
-  <description>Hello World</description>
+  <description>Spring Boot Admin</description>
 
   <properties>
     <java.version>17</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <spring-boot-admin.version>3.1.0</spring-boot-admin.version>
   </properties>
 
   <dependencies>
@@ -28,10 +29,18 @@
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
 
-    <!-- Actuator -->
+    <!-- Spring Boot Admin -->
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-actuator</artifactId>
+      <groupId>de.codecentric</groupId>
+      <artifactId>spring-boot-admin-starter-server</artifactId>
+      <version>${spring-boot-admin.version}</version>
+    </dependency>
+
+    <!-- Nacos Discovery -->
+    <dependency>
+      <groupId>com.alibaba.cloud</groupId>
+      <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+      <version>2022.0.0.0-RC2</version>
     </dependency>
   </dependencies>
 
@@ -46,13 +55,13 @@
             <id>repackage</id>
             <goals>
               <goal>repackage</goal>
-              <!-- Build-Infos for Info-Actuator -->
+              <!-- Build-Info for Info-Actuator -->
               <goal>build-info</goal>
             </goals>
           </execution>
         </executions>
       </plugin>
-      <!-- GIT-Infos for Info-Actuator -->
+      <!-- GIT-Info for Info-Actuator -->
       <plugin>
         <groupId>io.github.git-commit-id</groupId>
         <artifactId>git-commit-id-maven-plugin</artifactId>
