Different SBA titles for different clients: Kubernetes Client / Kubernetes Fabric8

--- a/kubernetes/apps/spring-boot-admin-fabric8/deployment/values.yml
+++ b/kubernetes/apps/spring-boot-admin-fabric8/deployment/values.yml
@@ -2,4 +2,6 @@ name: spring-boot-admin-fabric8
 namespace: default
 
 deployment:
+  env:
+    SPRING_BOOT_ADMIN_UI_TITLE: Spring Boot Admin - Kubernetes Fabric8
   image: spring-boot-admin:fabric8
