--- a/kubernetes/helm-charts/spring-cloud-kubernetes-discoveryserver/values.yaml
+++ b/kubernetes/helm-charts/spring-cloud-kubernetes-discoveryserver/values.yaml
@@ -2,7 +2,7 @@ name: spring-cloud-kubernetes-discoveryserver
 namespace: default
 
 deployment:
-  image: springcloud/spring-cloud-kubernetes-discoveryserver:3.0.0-SNAPSHOT
+  image: springcloud/spring-cloud-kubernetes-discoveryserver:3.1.0
   pullPolicy: IfNotPresent
   updateStrategy: RollingUpdate
   maxSurge: 100%
