--- a/kubernetes/apps/spring-boot-admin-discoveryclient/src/main/resources/application.yml
+++ b/kubernetes/apps/spring-boot-admin-discoveryclient/src/main/resources/application.yml
@@ -7,13 +7,22 @@ spring:
   boot:
     admin:
       ui:
-        # public-url: ${SPRING_BOOT_ADMIN_UI_PUBLIC_URL:http://localhost:8080}
         title: ${SPRING_BOOT_ADMIN_UI_TITLE:Spring Boot Admin}
         brand: <img src="assets/img/icon-spring-boot-admin.svg"><span>${SPRING_BOOT_ADMIN_UI_TITLE:Spring Boot Admin}</span>
       discovery: # Filter discovery to tagged services
         instances-metadata:
           spring-boot-admin: true # is added as annotation in service.yaml in helm chart
-
+  cloud:
+    kubernetes:
+      discovery:
+        all-namespaces: true
+        include-not-ready-addresses: true
+        discovery-server-url: "http://spring-cloud-kubernetes-discoveryserver"
+# for local development (starting directly from IDE), enable port forwarding for discovery server and use the following
+# three lines instead of the one above
+#        discovery-server-url: "http://localhost:8761"
+#  main:
+#    cloud-platform: KUBERNETES
 management: # Actuator Configuration
   server:
     port: 8081
