Optimized README.md and changed the SBA title of the discovery client edition

--- a/kubernetes/apps/spring-boot-admin-discoveryclient/deployment/values.yml
+++ b/kubernetes/apps/spring-boot-admin-discoveryclient/deployment/values.yml
@@ -2,6 +2,8 @@ name: spring-boot-admin-discoveryclient
 namespace: default
 
 deployment:
+  env:
+    SPRING_BOOT_ADMIN_UI_TITLE: Spring Boot Admin - Discovery Client
   server:
     port: 8080
   management:
