Enable discovery of discoveryserver
spring-boot: "true"
annotations:
  spring-boot-admin: "true"

--- a/kubernetes/helm-charts/spring-cloud-kubernetes-discoveryserver/templates/service.yaml
+++ b/kubernetes/helm-charts/spring-cloud-kubernetes-discoveryserver/templates/service.yaml
@@ -5,6 +5,10 @@ metadata:
   namespace: {{ .Values.namespace }}
   labels:
     app: {{ .Values.name }}
+    spring-boot: "true"
+  # Filter discovery to tagged services
+  annotations:
+    spring-boot-admin: "true"
 spec:
   ports:
     - port: 80
