--- a/kubernetes/apps/health-simulator/src/main/resources/application.yml
+++ b/kubernetes/apps/health-simulator/src/main/resources/application.yml
@@ -15,6 +15,8 @@ management: # Actuator Configuration
       show-details: always
       probes:
         enabled: true
+      status:
+        order: DOWN,OUT_OF_SERVICE,UNKNOWN,UP
     env: # Environment-Actuator
       show-values: always
     configprops: # Configuration-Actuator
