Use livez and readyz for liveness and readiness
add-additional-paths: true
path: /{{ .Values.name }}/livez
path: /{{ .Values.name }}/readyz

--- a/kubernetes/apps/health-simulator/src/main/resources/application.yml
+++ b/kubernetes/apps/health-simulator/src/main/resources/application.yml
@@ -15,6 +15,7 @@ management: # Actuator Configuration
       show-details: always
       probes:
         enabled: true
+        add-additional-paths: true
       status:
         order: DOWN,OUT_OF_SERVICE,UNKNOWN,UP
     env: # Environment-Actuator
