--- a/kubernetes/apps/spring-boot-admin-discoveryclient/src/main/resources/application.yml
+++ b/kubernetes/apps/spring-boot-admin-discoveryclient/src/main/resources/application.yml
@@ -35,6 +35,7 @@ management: # Actuator Configuration
       show-details: always
       probes:
         enabled: true
+        add-additional-paths: true
     env: # Environment-Actuator
       show-values: always
     configprops: # Configuration-Actuator
