--- a/kubernetes/apps/hello-world/src/main/resources/application.yml
+++ b/kubernetes/apps/hello-world/src/main/resources/application.yml
@@ -15,6 +15,7 @@ management: # Actuator Configuration
       show-details: always
       probes:
         enabled: true
+        add-additional-paths: true
     env: # Environment-Actuator
       show-values: always
     configprops: # Configuration-Actuator
