--- a/kubernetes/helm-charts/spring-boot-admin/templates/deployment.yaml
+++ b/kubernetes/helm-charts/spring-boot-admin/templates/deployment.yaml
@@ -44,13 +44,13 @@ spec:
           protocol: TCP
         livenessProbe:
           httpGet:
-            path: /actuator/health/liveness
-            port: {{ .Values.deployment.management.port }}
+            path: /{{ .Values.name }}/livez
+            port: {{ .Values.deployment.server.port }}
           initialDelaySeconds: {{ .Values.deployment.livenessProbe.initialDelaySeconds }}
           timeoutSeconds: {{ .Values.deployment.livenessProbe.timeoutSeconds }}
         readinessProbe:
           httpGet:
-            path: /actuator/health/readiness
-            port: {{ .Values.deployment.management.port }}
+            path: /{{ .Values.name }}/readyz
+            port: {{ .Values.deployment.server.port }}
           initialDelaySeconds: {{ .Values.deployment.readinessProbe.initialDelaySeconds }}
           timeoutSeconds: {{ .Values.deployment.readinessProbe.timeoutSeconds }}
