--- a/kubernetes/helm-charts/spring-boot-app/templates/deployment.yaml
+++ b/kubernetes/helm-charts/spring-boot-app/templates/deployment.yaml
@@ -35,21 +35,21 @@ spec:
         {{- end }}
         {{- end }}
         ports:
-        - containerPort: 8080
+        - containerPort: {{ .Values.deployment.server.port }}
           name: http
           protocol: TCP
-        - containerPort: 8081
+        - containerPort: {{ .Values.deployment.management.port }}
           name: management
           protocol: TCP
         livenessProbe:
           httpGet:
-            path: /actuator/health/liveness
-            port: 8081
+            path: /{{ .Values.name }}/livez
+            port: {{ .Values.deployment.server.port }}
           initialDelaySeconds: {{ .Values.deployment.livenessProbe.initialDelaySeconds }}
           timeoutSeconds: {{ .Values.deployment.livenessProbe.timeoutSeconds }}
         readinessProbe:
           httpGet:
-            path: /actuator/health/readiness
-            port: 8081
+            path: /{{ .Values.name }}/readyz
+            port: {{ .Values.deployment.server.port }}
           initialDelaySeconds: {{ .Values.deployment.readinessProbe.initialDelaySeconds }}
           timeoutSeconds: {{ .Values.deployment.readinessProbe.timeoutSeconds }}
