--- a/kubernetes/helm-charts/spring-boot-app/values.yaml
+++ b/kubernetes/helm-charts/spring-boot-app/values.yaml
@@ -16,3 +16,7 @@ deployment:
   readinessProbe:
     initialDelaySeconds: 10
     timeoutSeconds: 10
+  server:
+    port: 8080
+  management:
+    port: 8081
