added Eureka Server Application

--- a/eureka/docker-compose.yml
+++ b/eureka/docker-compose.yml
@@ -1,18 +1,18 @@
 services:
   eureka:
-    image: springcloud/eureka
+    image: eureka-server
     container_name: eureka
     ports:
       - "8761:8761"
     environment:
       - EUREKA_INSTANCE_PREFERIPADDRESS=true
-      - EUREKA_SERVICE_URL=http://eureka:8761
 
   hello-world:
     container_name: hello-world-eureka
     image: hello-world-eureka
     environment:
       - EUREKA_INSTANCE_PREFERIPADDRESS=true
+      - EUREKA_SERVICE_URL=http://eureka:8761
     ports:
       - "8180:8080"
       - "8181:8081"
