--- a/eureka/apps/eureka/pom.xml
+++ b/eureka/apps/eureka/pom.xml
@@ -11,16 +11,15 @@
   </parent>
 
   <groupId>de.codecentric</groupId>
-  <artifactId>spring-boot-admin-eureka</artifactId>
+  <artifactId>eureka-server</artifactId>
   <packaging>jar</packaging>
   <name>${project.artifactId}</name>
   <version>1.0.0-SNAPSHOT</version>
-  <description>Spring Boot Admin</description>
+  <description>Eureka Server</description>
 
   <properties>
     <java.version>17</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <spring-boot-admin.version>3.2.1</spring-boot-admin.version>
     <spring-cloud.version>2023.0.0</spring-cloud.version>
   </properties>
 
@@ -38,20 +37,8 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
-    </dependency>
-
-    <!-- Spring Boot Admin -->
-    <dependency>
-      <groupId>de.codecentric</groupId>
-      <artifactId>spring-boot-admin-starter-server</artifactId>
-      <version>${spring-boot-admin.version}</version>
-    </dependency>
-
-    <dependency>
       <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+      <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
     </dependency>
   </dependencies>
 
@@ -61,24 +48,6 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>repackage</id>
-            <goals>
-              <goal>repackage</goal>
-              <!-- Build-Info for Info-Actuator -->
-              <goal>build-info</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <!-- GIT-Info for Info-Actuator -->
-      <plugin>
-        <groupId>io.github.git-commit-id</groupId>
-        <artifactId>git-commit-id-maven-plugin</artifactId>
-        <configuration>
-          <offline>true</offline>
-        </configuration>
       </plugin>
     </plugins>
   </build>
