Eureka registers itself

--- a/eureka/apps/eureka/pom.xml
+++ b/eureka/apps/eureka/pom.xml
@@ -48,6 +48,24 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>repackage</id>
+            <goals>
+              <goal>repackage</goal>
+              <!-- Build-Info for Info-Actuator -->
+              <goal>build-info</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <!-- GIT-Info for Info-Actuator -->
+      <plugin>
+        <groupId>io.github.git-commit-id</groupId>
+        <artifactId>git-commit-id-maven-plugin</artifactId>
+        <configuration>
+          <offline>true</offline>
+        </configuration>
       </plugin>
     </plugins>
   </build>
