--- a/kubernetes/apps/health-simulator/src/main/resources/application.yml
+++ b/kubernetes/apps/health-simulator/src/main/resources/application.yml
@@ -19,9 +19,9 @@ management: # Actuator Configuration
       status:
         order: DOWN,OUT_OF_SERVICE,UNKNOWN,UP
     env: # Environment-Actuator
-      show-values: always
+      show-values: always # caution: can reveal passwords
     configprops: # Configuration-Actuator
-      show-values: always
+      show-values: always # caution: can reveal passwords
   info: # Info-Actuator
     java:
       enabled: true
