--- a/kubernetes/apps/spring-boot-admin-fabric8/src/main/resources/application.yml
+++ b/kubernetes/apps/spring-boot-admin-fabric8/src/main/resources/application.yml
@@ -28,9 +28,9 @@ management: # Actuator Configuration
         enabled: true
         add-additional-paths: true
     env: # Environment-Actuator
-      show-values: always
+      show-values: always # caution: can reveal passwords
     configprops: # Configuration-Actuator
-      show-values: always
+      show-values: always # caution: can reveal passwords
   info: # Info-Actuator
     java:
       enabled: true
