--- a/kubernetes/helm-charts/spring-cloud-kubernetes-discoveryserver/templates/role.yaml
+++ b/kubernetes/helm-charts/spring-cloud-kubernetes-discoveryserver/templates/role.yaml
@@ -3,8 +3,16 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   namespace: default
   name: namespace-reader
-
 rules:
-  - apiGroups: ["", "extensions", "apps"]
-    resources: ["services", "endpoints"]
-    verbs: ["get", "list", "watch"]
+- apiGroups:
+    - ""
+    - extensions
+    - apps
+  resources:
+    - pods
+    - endpoints
+    - services
+  verbs:
+    - get
+    - list
+    - watch
