Enabled SPRING_CLOUD_KUBERNETES_HTTP_DISCOVERY_CATALOG_WATCHER_ENABLED

--- a/kubernetes/apps/spring-boot-admin-discoveryclient/src/main/resources/application.yml
+++ b/kubernetes/apps/spring-boot-admin-discoveryclient/src/main/resources/application.yml
@@ -18,6 +18,11 @@ spring:
         all-namespaces: true
         include-not-ready-addresses: true
         discovery-server-url: "http://spring-cloud-kubernetes-discoveryserver"
+      http:
+        discovery:
+          catalog:
+            watcher:
+              enabled: true
 # for local development (starting directly from IDE), enable port forwarding for discovery server and use the following
 # three lines instead of the one above
 #        discovery-server-url: "http://localhost:8761"
@@ -67,3 +72,4 @@ info: # Application-Infos for the Info-Actuator
 logging: # Logging-File for the Logfile-Actuator
   file:
     name: "spring-boot-admin.log"
+debug: true
