--- a/kubernetes/helm-charts/spring-boot-app/templates/service.yaml
+++ b/kubernetes/helm-charts/spring-boot-app/templates/service.yaml
@@ -8,6 +8,7 @@ metadata:
     spring-boot: "true" # used by kubernetes java client to filter directly in discovery client
   annotations:
     spring-boot-admin: "true" # used by SBA server to filter services (e.g. when using fabric8 client)
+    group: {{ .Values.deployment.group }} # optional: used by SBA frontend to group services
 spec:
   ports:
     - port: 8080
