--- a/spring-cloud-bus/apps/hello-world/pom.xml
+++ b/spring-cloud-bus/apps/hello-world/pom.xml
@@ -16,7 +16,7 @@
 
 	<properties>
 		<java.version>17</java.version>
-		<spring-boot-admin.version>3.4.1</spring-boot-admin.version>
+		<spring-boot-admin.version>3.4.2-SNAPSHOT</spring-boot-admin.version>
 		<spring-cloud.version>2024.0.0</spring-cloud.version>
 	</properties>
 
