--- a/cache-and-db-metrics/apps/hello-data/src/main/resources/application.properties
+++ b/cache-and-db-metrics/apps/hello-data/src/main/resources/application.properties
@@ -16,6 +16,7 @@ management.endpoint.health.probes.enabled=true
 # use docker-compose internal service name to access sba server
 #
 spring.boot.admin.client.url=http://spring-boot-admin:8080
+spring.application.name=@pom.name@
 #
 # Cache
 #
