--- a/hazelcast/apps/spring-boot-admin/pom.xml
+++ b/hazelcast/apps/spring-boot-admin/pom.xml
@@ -17,12 +17,17 @@
 	<properties>
 		<java.version>17</java.version>
 		<spring-boot-admin.version>3.5.5</spring-boot-admin.version>
+        <spring-cloud.version>2025.0.0</spring-cloud.version>
 	</properties>
 
 	<dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter</artifactId>
         </dependency>
 		<dependency>
 			<groupId>de.codecentric</groupId>
@@ -43,7 +48,14 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
-		</dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
 	</dependencyManagement>
 
   <build>
