Update to Spring Boot 4 and Traefik 3

--- a/kubernetes/helm-charts/traefik/templates/deployment.yaml
+++ b/kubernetes/helm-charts/traefik/templates/deployment.yaml
@@ -18,7 +18,7 @@ spec:
       serviceAccountName: traefik-account
       containers:
         - name: traefik
-          image: traefik:v2.9
+          image: traefik:3
           args:
             - --api.insecure
             - --providers.kubernetesingress
