--- a/kubernetes/apps/spring-boot-admin-discoveryclient/pom.xml
+++ b/kubernetes/apps/spring-boot-admin-discoveryclient/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.5.6</version>
+    <version>4.0.0</version>
   </parent>
 
   <groupId>de.codecentric</groupId>
@@ -20,8 +20,8 @@
   <properties>
     <java.version>17</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <spring-boot-admin.version>3.5.5</spring-boot-admin.version>
-    <spring-cloud.version>2025.0.0</spring-cloud.version>
+    <spring-boot-admin.version>4.0.0-M1</spring-boot-admin.version>
+    <spring-cloud.version>2025.1.0-RC1</spring-cloud.version>
   </properties>
 
   <!-- Kubernetes Discovery -->
