Update to Spring Boot 4 and Traefik 3

--- a/kubernetes/helm-charts/spring-boot-admin/values.yaml
+++ b/kubernetes/helm-charts/spring-boot-admin/values.yaml
@@ -1,12 +1,11 @@
 name: spring-boot-admin
-namespace: default
+namespace: spring-boot-admin
 
 deployment:
   env:
     SPRING_BOOT_ADMIN_UI_TITLE: Spring Boot Admin - Kubernetes
   image: spring-boot-admin
-  # do not pull image but use locally built image, not recommended for production
-  pullPolicy: Never
+  pullPolicy: Always
   updateStrategy: RollingUpdate
   maxSurge: 100%
   maxUnavailable: 0%
