--- a/kubernetes/helm-charts/spring-cloud-kubernetes-discoveryserver/values.yaml
+++ b/kubernetes/helm-charts/spring-cloud-kubernetes-discoveryserver/values.yaml
@@ -1,10 +1,10 @@
 name: spring-cloud-kubernetes-discoveryserver
-namespace: default
+namespace: spring-boot-admin
 
 deployment:
   # https://hub.docker.com/r/springcloud/spring-cloud-kubernetes-discoveryserver/tags
-  image: springcloud/spring-cloud-kubernetes-discoveryserver:3.3.0
-  pullPolicy: IfNotPresent
+  image: springcloud/spring-cloud-kubernetes-discoveryserver:5.0.0-M4
+  pullPolicy: Always
   updateStrategy: RollingUpdate
   maxSurge: 100%
   maxUnavailable: 0%
