--- a/kubernetes/helm-charts/traefik/templates/role-binding.yaml
+++ b/kubernetes/helm-charts/traefik/templates/role-binding.yaml
@@ -10,4 +10,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: traefik-account
-    namespace: default # Using "default" because we did not specify a namespace when creating the ClusterAccount.
+    namespace: spring-boot-admin
