--- a/kubernetes/helm-charts/traefik/templates/service.yaml
+++ b/kubernetes/helm-charts/traefik/templates/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: traefik-dashboard-service
+  namespace: spring-boot-admin
 
 spec:
   type: LoadBalancer
