Update to Spring Boot 4 and Traefik 3

--- a/kubernetes/helm-charts/spring-cloud-kubernetes-discoveryserver/values.yaml
+++ b/kubernetes/helm-charts/spring-cloud-kubernetes-discoveryserver/values.yaml
@@ -1,5 +1,5 @@
 name: spring-cloud-kubernetes-discoveryserver
-namespace: spring-boot-admin
+namespace: default
 
 deployment:
   # https://hub.docker.com/r/springcloud/spring-cloud-kubernetes-discoveryserver/tags
