--- a/kubernetes/helm-charts/traefik/templates/deployment.yaml
+++ b/kubernetes/helm-charts/traefik/templates/deployment.yaml
@@ -2,7 +2,7 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: traefik-deployment
-  namespace: spring-boot-admin
+  namespace: default
   labels:
     app: traefik
 
