--- a/kubernetes/helm-charts/traefik/templates/service.yaml
+++ b/kubernetes/helm-charts/traefik/templates/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: traefik-dashboard-service
-  namespace: spring-boot-admin
+  namespace: default
 
 spec:
   type: LoadBalancer
@@ -16,6 +16,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: traefik-web-service
+  namespace: default
 
 spec:
   type: LoadBalancer
