--- a/kubernetes/helm-charts/spring-cloud-kubernetes-discoveryserver/templates/role-binding.yaml
+++ b/kubernetes/helm-charts/spring-cloud-kubernetes-discoveryserver/templates/role-binding.yaml
@@ -11,3 +11,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: spring-cloud-kubernetes-discoveryserver
+    namespace: {{ .Values.namespace }}
