--- a/kubernetes/helm-charts/traefik/templates/deployment.yaml
+++ b/kubernetes/helm-charts/traefik/templates/deployment.yaml
@@ -2,6 +2,7 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: traefik-deployment
+  namespace: {{ .Values.namespace }}
   labels:
     app: traefik
 
@@ -18,7 +19,7 @@ spec:
       serviceAccountName: traefik-account
       containers:
         - name: traefik
-          image: traefik:3
+          image: {{ .Values.deployment.image }}
           args:
             - --api.insecure
             - --providers.kubernetesingress
