--- a/kubernetes/helm-charts/traefik/templates/service.yaml
+++ b/kubernetes/helm-charts/traefik/templates/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: traefik-dashboard-service
+  namespace: {{ .Values.namespace }}
 
 spec:
   type: LoadBalancer
@@ -15,6 +16,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: traefik-web-service
+  namespace: {{ .Values.namespace }}
 
 spec:
   type: LoadBalancer
