--- a/kubernetes/apps/hello-world/pom.xml
+++ b/kubernetes/apps/hello-world/pom.xml
@@ -60,6 +60,11 @@
           <offline>true</offline>
         </configuration>
       </plugin>
+      <!--Dependencies for SBOM-Actuator -->
+      <plugin>
+        <groupId>org.cyclonedx</groupId>
+        <artifactId>cyclonedx-maven-plugin</artifactId>
+      </plugin>
     </plugins>
   </build>
 
