--- a/kubernetes/apps/spring-boot-admin-fabric8/pom.xml
+++ b/kubernetes/apps/spring-boot-admin-fabric8/pom.xml
@@ -82,6 +82,11 @@
           <offline>true</offline>
         </configuration>
       </plugin>
+      <!--Dependencies for SBOM-Actuator -->
+      <plugin>
+        <groupId>org.cyclonedx</groupId>
+        <artifactId>cyclonedx-maven-plugin</artifactId>
+      </plugin>
     </plugins>
   </build>
 
