Update Kubernetes Playground to Spring Boot 4 (#26)
* Update to Spring Boot 4 and Traefik 3
* Update spring-cloud.version to 2025.1.0
* Add CycloneDX Maven plugin for SBOM-Actuator support
* Replace spring-boot-starter-web with spring-boot-starter-webmvc in pom.xml

--- a/kubernetes/apps/hello-world/pom.xml
+++ b/kubernetes/apps/hello-world/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.5.6</version>
+    <version>4.0.2</version>
   </parent>
 
   <groupId>de.codecentric</groupId>
@@ -25,7 +25,7 @@
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
+      <artifactId>spring-boot-starter-webmvc</artifactId>
     </dependency>
 
     <!-- Actuator -->
@@ -59,6 +59,11 @@
         <configuration>
           <offline>true</offline>
         </configuration>
+      </plugin>
+      <!--Dependencies for SBOM-Actuator -->
+      <plugin>
+        <groupId>org.cyclonedx</groupId>
+        <artifactId>cyclonedx-maven-plugin</artifactId>
       </plugin>
     </plugins>
   </build>
