--- a/kubernetes/apps/spring-boot-admin-kubernetes/pom.xml
+++ b/kubernetes/apps/spring-boot-admin-kubernetes/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.5.6</version>
+    <version>4.0.2</version>
   </parent>
 
   <groupId>de.codecentric</groupId>
@@ -20,8 +20,8 @@
   <properties>
     <java.version>17</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <spring-boot-admin.version>3.5.5</spring-boot-admin.version>
-    <spring-cloud.version>2025.0.0</spring-cloud.version>
+    <spring-boot-admin.version>4.0.0-M1</spring-boot-admin.version>
+    <spring-cloud.version>2025.1.0</spring-cloud.version>
   </properties>
 
   <!-- Kubernetes Discovery -->
@@ -40,7 +40,7 @@
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
+      <artifactId>spring-boot-starter-webmvc</artifactId>
     </dependency>
 
     <!-- Spring Boot Admin -->
@@ -81,6 +81,11 @@
         <configuration>
           <offline>true</offline>
         </configuration>
+      </plugin>
+      <!--Dependencies for SBOM-Actuator -->
+      <plugin>
+        <groupId>org.cyclonedx</groupId>
+        <artifactId>cyclonedx-maven-plugin</artifactId>
       </plugin>
     </plugins>
   </build>
