--- a/nginx/apps/hello-world/pom.xml
+++ b/nginx/apps/hello-world/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.6</version>
+		<version>4.0.2</version>
 	</parent>
 
 	<groupId>de.codecentric</groupId>
@@ -16,7 +16,7 @@
 
 	<properties>
 		<java.version>17</java.version>
-		<spring-boot-admin.version>3.5.5</spring-boot-admin.version>
+		<spring-boot-admin.version>4.0.0-M1</spring-boot-admin.version>
 	</properties>
 
 	<dependencies>
@@ -26,7 +26,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
+			<artifactId>spring-boot-starter-webmvc</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>de.codecentric</groupId>
