--- a/nginx/apps/hello-world/pom.xml
+++ b/nginx/apps/hello-world/pom.xml
@@ -16,7 +16,7 @@
 
 	<properties>
 		<java.version>17</java.version>
-		<spring-boot-admin.version>4.0.0-M2</spring-boot-admin.version>
+		<spring-boot-admin.version>4.0.0</spring-boot-admin.version>
 	</properties>
 
 	<dependencies>
