--- a/eureka/apps/spring-boot-admin/pom.xml
+++ b/eureka/apps/spring-boot-admin/pom.xml
@@ -70,6 +70,12 @@
               <goal>build-info</goal>
             </goals>
           </execution>
+          <execution>
+            <id>process-aot</id>
+            <goals>
+              <goal>process-aot</goal>
+            </goals>
+          </execution>
         </executions>
       </plugin>
       <!-- GIT-Info for Info-Actuator -->
