--- a/nacos/apps/spring-boot-admin/pom.xml
+++ b/nacos/apps/spring-boot-admin/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.5.6</version>
+    <version>4.0.2</version>
   </parent>
 
   <groupId>de.codecentric</groupId>
@@ -20,13 +20,14 @@
   <properties>
     <java.version>17</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <spring-boot-admin.version>3.5.5</spring-boot-admin.version>
+    <spring-boot-admin.version>4.0.0</spring-boot-admin.version>
+    <spring-cloud-starter-alibaba-nacos-discovery.version>2025.1.0.0</spring-cloud-starter-alibaba-nacos-discovery.version>
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
+      <artifactId>spring-boot-starter-webmvc</artifactId>
     </dependency>
 
     <!-- Spring Boot Admin -->
@@ -40,7 +41,7 @@
     <dependency>
       <groupId>com.alibaba.cloud</groupId>
       <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-      <version>2023.0.3.3</version>
+      <version>${spring-cloud-starter-alibaba-nacos-discovery.version}</version>
     </dependency>
   </dependencies>
 
