Nacos: feat(AOT): enable AOT processing in application.yml and update Dockerfile and pom.xml

--- a/nacos/apps/spring-boot-admin/src/main/resources/application.yml
+++ b/nacos/apps/spring-boot-admin/src/main/resources/application.yml
@@ -49,12 +49,12 @@ info: # Application-Info for the Info-Actuator
   version: "@pom.version@"
   spring-boot: "@pom.parent.version@"
   spring-boot-admin: "@spring-boot-admin.version@"
-  spring-cloud: "@spring-cloud.version@"
+  nacos-discovery: "@spring-cloud-starter-alibaba-nacos-discovery.version@"
   # Tags for the Spring Boot Admin UI
   tags:
     spring-boot: "@pom.parent.version@"
     spring-boot-admin: "@spring-boot-admin.version@"
-    spring-cloud: "@spring-cloud.version@"
+    nacos-discovery: "@spring-cloud-starter-alibaba-nacos-discovery.version@"
 logging: # Logging-File for the Logfile-Actuator
   file:
     name: "spring-boot-admin.log"
